--- a/HW_ProfileBook/HW_ProfileBook/Resource/Resource.resx
+++ b/HW_ProfileBook/HW_ProfileBook/Resource/Resource.resx
@@ -141,11 +141,23 @@
   <data name="English" xml:space="preserve">
     <value>English</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="Invalid login or password!" xml:space="preserve">
+    <value>Invalid login or password!</value>
+  </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="Login must be at least 4 and no more than 16 characters." xml:space="preserve">
+    <value>Login must be at least 4 and no more than 16 characters.</value>
+  </data>
+  <data name="Login should not start with numbers." xml:space="preserve">
+    <value>Login should not start with numbers.</value>
   </data>
   <data name="Main List" xml:space="preserve">
     <value>Main List</value>
@@ -158,6 +170,9 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="Password must contain at least one uppercase letter, one lowercase letter and one number." xml:space="preserve">
+    <value>Password must contain at least one uppercase letter, one lowercase letter and one number.</value>
   </data>
   <data name="Pick at gelarry" xml:space="preserve">
     <value>Pick at gelarry</value>
@@ -180,8 +195,14 @@
   <data name="Take photo with camera" xml:space="preserve">
     <value>Take photo with camera</value>
   </data>
+  <data name="The values in the password and confirm password fields must match." xml:space="preserve">
+    <value>The values in the password and confirm password fields must match.</value>
+  </data>
   <data name="Theme" xml:space="preserve">
     <value>Theme</value>
+  </data>
+  <data name="This login already taken." xml:space="preserve">
+    <value>This login already taken.</value>
   </data>
   <data name="User SignUp" xml:space="preserve">
     <value>User SignUp</value>
