--- a/HW_ProfileBook/HW_ProfileBook/Resource/Resource.ru.resx
+++ b/HW_ProfileBook/HW_ProfileBook/Resource/Resource.ru.resx
@@ -141,11 +141,23 @@
   <data name="English" xml:space="preserve">
     <value>Английский</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Ошибка</value>
+  </data>
+  <data name="Invalid login or password!" xml:space="preserve">
+    <value>Не правельный логин или пароль.</value>
+  </data>
   <data name="Language" xml:space="preserve">
     <value>Язык приложения</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Логин</value>
+  </data>
+  <data name="Login must be at least 4 and no more than 16 characters." xml:space="preserve">
+    <value>Логин должен быть не менее 4 и не более 16 символов.</value>
+  </data>
+  <data name="Login should not start with numbers." xml:space="preserve">
+    <value>Логин не должен начинаться с цифр.</value>
   </data>
   <data name="Main List" xml:space="preserve">
     <value>Профайлы</value>
@@ -158,6 +170,9 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
+  </data>
+  <data name="Password must contain at least one uppercase letter, one lowercase letter and one number." xml:space="preserve">
+    <value>Пароль должен содержать минимум одну заглавную букву, одну строчную букву и одну цифру.</value>
   </data>
   <data name="Pick at gelarry" xml:space="preserve">
     <value>Выбрать из галереи</value>
@@ -180,8 +195,14 @@
   <data name="Take photo with camera" xml:space="preserve">
     <value>Сделать фото</value>
   </data>
+  <data name="The values in the password and confirm password fields must match." xml:space="preserve">
+    <value>Значения в полях пароля и подтверждения пароля должны совпадать.</value>
+  </data>
   <data name="Theme" xml:space="preserve">
     <value>Оформление</value>
+  </data>
+  <data name="This login already taken." xml:space="preserve">
+    <value>Этот логин уже занят.</value>
   </data>
   <data name="User SignUp" xml:space="preserve">
     <value>Регистрация</value>
