--- a/HW_ProfileBook/HW_ProfileBook/Resource/Resource.ru.resx
+++ b/HW_ProfileBook/HW_ProfileBook/Resource/Resource.ru.resx
@@ -154,7 +154,7 @@
     <value>Логин</value>
   </data>
   <data name="Login must be at least 4 and no more than 16 characters." xml:space="preserve">
-    <value>Логин должен быть не менее 4 и не более 16 символов.</value>
+    <value>Логин должен иметь не менее 4 и не более 16 символов.</value>
   </data>
   <data name="Login should not start with numbers." xml:space="preserve">
     <value>Логин не должен начинаться с цифр.</value>
